# text-baker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  expt.py  file_handler.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  textbaker_config.yaml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  character-segmentation.md  cli.md  configuration.md  examples.md  gen_ref_pages.py  index.md
docs/getting-started/: cli.md  installation.md  quickstart.md
docs/guide/: configuration.md  custom-characters.md  dataset.md  overview.md  transformations.md
docs/stylesheets/: extra.css
examples/: README.md  basic_generation.py  generate_icon.py  generate_readme_images.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_configs.py  test_generator.py  test_random_state.py  test_ui_config.py
textbaker/: __init__.py  __main__.py  cli.py  ui_config.py
textbaker/app/: __init__.py  main_window.py
textbaker/core/: __init__.py  configs.py  defs.py  generator.py  image_processing.py
textbaker/utils/: __init__.py  helpers.py  logging.py  random_state.py
textbaker/widgets/: __init__.py  dialogs.py  drawing_canvas.py  graphics.py  segment_dialog.py
